--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -18,3 +18,24 @@
             margin: auto;
             padding: 20px;
         }
+
+        header {
+            background: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        section {
+            margin: 20px 0;
+            padding: 20px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h3 {
+            background-color: #d3d3d3;
+            text-align: center;
+            padding: 10px 0;
+            margin: 0 -20px 20px -20px;
+            border-radius: 10px 10px 0 0;
+        }
