--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -39,3 +39,29 @@
             margin: 0 -20px 20px -20px;
             border-radius: 10px 10px 0 0;
         }
+        
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul.employment li, ul.education li {
+            margin-bottom: 15px;
+        }
+        ul.skills {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-gap: 10px;
+        }
+        ul.skills li {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #333;
+            color: #fff;
+        }
+    </style>
+</head>
