--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -65,3 +65,16 @@
         }
     </style>
 </head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Jaafar Merhi</h1>
+            <h2>DevOps Engineer</h2>
+        </div>
+    </header>
+
+    <div class="container">
+        <section id="profile">
+            <h3>Profile</h3>
+            <p>As a dynamic DevOps Engineer, I leveraged my background in technology to transition into the ever-evolving tech industry. My background has provided me with the means to develop and optimise IT infrastructure. Since learning the fundamentals of DevOps Engineering, I am now pursuing specialisation and certification.</p>
+        </section>
