--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -78,3 +78,8 @@
             <h3>Profile</h3>
             <p>As a dynamic DevOps Engineer, I leveraged my background in technology to transition into the ever-evolving tech industry. My background has provided me with the means to develop and optimise IT infrastructure. Since learning the fundamentals of DevOps Engineering, I am now pursuing specialisation and certification.</p>
         </section>
+        <section id="employment">
+            <h3>Employment History</h3>
+            <ul class="employment">
+                <li><strong>Infrastructure Engineer at UK Home Office, (Contract)</strong><br>August 2023 — Present<br>- Contracted by Sparta Global to improve, support and manage infrastructure made up of Terraform, Jenkins, Ansible, AWS, Docker and Kubernetes. Used tools like Jira, Slack and Kanban to effectively communicate with various roles.</li>
+                <li><strong>Junior DevOps Engineer at Sparta Global, (FT)</strong><br>April 2023 — Present<br>- Implemented micro-services, CI/CD pipelines while practicing Agile methodologies to enhance productivity. Utilized tools such as Terraform, Jenkins, Kubernetes, Ansible, Docker and AWS to manage private clouds and improve infrastructure. Employed Vagrant, Virtual Box, Linux, and Git Bash for version control and leveraged Python programming skills to automate tasks and system operations.</li>
