--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -83,3 +83,25 @@
             <ul class="employment">
                 <li><strong>Infrastructure Engineer at UK Home Office, (Contract)</strong><br>August 2023 — Present<br>- Contracted by Sparta Global to improve, support and manage infrastructure made up of Terraform, Jenkins, Ansible, AWS, Docker and Kubernetes. Used tools like Jira, Slack and Kanban to effectively communicate with various roles.</li>
                 <li><strong>Junior DevOps Engineer at Sparta Global, (FT)</strong><br>April 2023 — Present<br>- Implemented micro-services, CI/CD pipelines while practicing Agile methodologies to enhance productivity. Utilized tools such as Terraform, Jenkins, Kubernetes, Ansible, Docker and AWS to manage private clouds and improve infrastructure. Employed Vagrant, Virtual Box, Linux, and Git Bash for version control and leveraged Python programming skills to automate tasks and system operations.</li>
+                <li><strong>Data Manager at Richmond Pharmacology</strong><br>September 2022 — April 2023<br>- Managed data, databases and study documents, implementing data protection guidelines and automated tasks using VBA and resolved issues with data quality and reliability.</li>
+                <li><strong>Laboratory Assistant at Richmond Pharmacology</strong><br>March 2022 — September 2022<br>- Managed schedules, performed biological analysis and communicated data across departments to ensure efficient problem resolution.</li>
+            </ul>
+        </section>
+
+        <section id="skills">
+            <h3>Skills</h3>
+            <ul class="skills">
+                <li>AWS (Amazon Web Service)</li>
+                <li>Terraform</li>
+                <li>Kubernetes</li>
+                <li>Docker</li>
+                <li>Jenkins</li>
+                <li>Ansible</li>
+                <li>Linux</li>
+                <li>Python</li>
+                <li>Bash</li>
+                <li>Vagrant</li>
+                <li>Kafka</li>
+                <li>Agile / Scrum</li>
+            </ul>
+        </section>
