showcv lang/education

--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -105,3 +105,16 @@
                 <li>Agile / Scrum</li>
             </ul>
         </section>
+        <section id="languages">
+            <h3>Languages</h3>
+            <p>Arabic</p>
+        </section>
+
+        <section id="education">
+            <h3>Education</h3>
+            <ul class="education">
+                <li>MRes Chemical Research, Birkbeck, University of London<br>September 2019 — December 2022</li>
+                <li>BSc Pharmaceutical Chemistry, University of Huddersfield<br>September 2016 — September 2019</li>
+            </ul>
+        </section>
+    </div>
