--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -118,3 +118,9 @@
             </ul>
         </section>
     </div>
+
+    <footer>
+        <p>Location: London | Phone: +447794980448 | Email: jaafarmerhi1@hotmail.co.uk</p>
+    </footer>
+</body>
+</html>
