--- a/Static_Website/index.html
+++ b/Static_Website/index.html
@@ -14,6 +14,7 @@
  | |__| | | (_| | | (_| | | |   | (_| | | |      | |  | | |  __/ | |    | | | | | |  
   \____/   \__,_|  \__,_| |_|    \__,_| |_|      |_|  |_|  \___| |_|    |_| |_| |_|  
     </pre>
+    <div id="visitor-count">Visitors: <span id="visitor-number">Loading...</span></div>
     <div id="welcome-message">
         Welcome to my interactive web terminal.<br>
         For a list of available commands, type 'help'.
@@ -31,3 +32,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
