--- a/Static_Website/index.html
+++ b/Static_Website/index.html
@@ -32,6 +32,12 @@
     <script src="script.js"></script>
 </body>
 </html>
+<footer>
+    <p>© 2024 jmerhi.com | This website is hosted on AWS!</p>
+</footer>
 
+<script src="script.js"></script>
+</body>
+</html>
 
 
