--- a/Static_Website/showcv.html
+++ b/Static_Website/showcv.html
@@ -76,16 +76,7 @@
     <div class="container">
         <section id="profile">
             <h3>Profile</h3>
-            <p>I come from a background in technology and science, where I am currently making a significant transition into the IT/Tech industry as a DevOps Engineer. My experience has equipped me with the skills necessary to develop and optimise IT infrastructure. Having grasped the fundamentals of DevOps Engineering, I am now focusing on specialising in cloud technologies and automation, with the aim of acquiring further certifications.</p>
-        </section>
-        <section id="employment">
-            <h3>Employment History</h3>
-            <ul class="employment">
-                <li><strong>Infrastructure Engineer at UK Home Office, (Contract)</strong><br>August 2023 —Present<br> Contracted by Sparta Global to improve, support and manage infrastructure made up of Terraform, Jenkins, Ansible, AWS, Docker and Kubernetes. Used tools like Jira, Slack and Kanban to effectively communicate with various roles.</li>
-                <li><strong>Junior DevOps Engineer at Sparta Global, (FT)</strong><br>April 2023 — Present<br>Implemented micro-services, CI/CD pipelines while practicing Agile methodologies to enhance productivity. Utilized tools such as Terraform, Jenkins, Kubernetes, Ansible, Docker and AWS to manage private clouds and improve infrastructure. Employed Vagrant, Virtual Box, Linux, and Git Bash for version control and leveraged Python programming skills to automate tasks and system operations.</li>
-                <li><strong>Data Manager at Richmond Pharmacology</strong><br>September 2022 — April 2023<br>Managed data, databases and study documents, implementing data protection guidelines and automated tasks using VBA and resolved issues with data quality and reliability.</li>
-                <li><strong>Laboratory Assistant at Richmond Pharmacology</strong><br>March 2022 — September 2022<br>Managed schedules, performed biological analysis and communicated data across departments to ensure efficient problem resolution.</li>
-            </ul>
+            <p>I come from a background in technology and science, where I am currently making a significant transition into the IT/tech industry as a DevOps Engineer. My experience has equipped me with the skills necessary to develop, optimise and troubleshoot IT infrastructure efficiently. Having grasped the fundamentals of DevOps Engineering, I am now focusing on specialising in cloud technologies and automation, with the aim of acquiring further certifications.</p>
         </section>
 
         <section id="skills">
@@ -105,6 +96,17 @@
                 <li>Agile / Scrum</li>
             </ul>
         </section>
+
+        <section id="employment">
+            <h3>Employment History</h3>
+            <ul class="employment">
+                <li><strong>Infrastructure Engineer at UK Home Office, (Contract)</strong><br>August 2023 —Present<br>Contracted by Sparta Global to improve, support and manage infrastructure made up of Terraform, Jenkins, Ansible, AWS, Docker and Kubernetes. Used tools like Jira, Slack and Kanban to effectively communicate with various roles.</li>
+                <li><strong>Junior DevOps Engineer at Sparta Global, (FT)</strong><br>April 2023 — Present<br>Implemented micro-services, CI/CD pipelines while practicing Agile methodologies to enhance productivity. Utilized tools such as Terraform, Jenkins, Kubernetes, Ansible, Docker and AWS to manage private clouds and improve infrastructure. Employed Vagrant, Virtual Box, Linux, and Git Bash for version control and leveraged Python programming skills to automate tasks and system operations.</li>
+                <li><strong>Data Manager at Richmond Pharmacology</strong><br>September 2022 — April 2023<br>Managed data, databases and study documents, implementing data protection guidelines and automated tasks using VBA and resolved issues with data quality and reliability.</li>
+                <li><strong>Laboratory Assistant at Richmond Pharmacology</strong><br>March 2022 — September 2022<br>Managed schedules, performed biological analysis and communicated data across departments to ensure efficient problem resolution.</li>
+            </ul>
+        </section>
+
         <section id="languages">
             <h3>Languages</h3>
             <table border="1" style="border-collapse: collapse; width: 100%;">
